[workspace]
members = ["hdwallet", "dilithium"]

[workspace.dependencies]
thiserror = "2.0.4"

[package]
name = "rusty-crystals"
version = "0.1.1"
edition = "2021"

[lib]
name = "rusty_crystals"
crate-type = ["lib"]

[features]
default = []
dilithium = ["dep:rusty-crystals-dilithium"]
hdwallet = ["dep:rusty-crystals-hdwallet"]
no_std = ["rusty-crystals-dilithium/no_std", "rusty-crystals-hdwallet/no_std"]

[dependencies]
rusty-crystals-dilithium = { path = "./dilithium", optional = true }
rusty-crystals-hdwallet = { path = "./hdwallet", optional = true }
getrandom = { version = "0.2", features = ["js"] }
