[workspace]
members = ["hdwallet", "dilithium"]

[workspace.dependencies]
thiserror = "2.0.4"
rand = "0.7.3"

[package]
name = "rusty-crystals"
version = "0.1.1"
edition = "2021"

[lib]
name = "rusty_crystals"
crate-type = ["lib"]

[features]
default = ["rand"]
no_std = ["rusty-crystals-dilithium/no_std", "rusty-crystals-hdwallet/no_std"]
dilithium = ["dep:rusty-crystals-dilithium"]
hdwallet = ["dep:rusty-crystals-hdwallet"]

[dependencies]
rand = { workspace = true, optional = true }
rusty-crystals-dilithium = { path = "./dilithium", optional = true }
rusty-crystals-hdwallet = { path = "./hdwallet", optional = true }
getrandom = { version = "0.2", features = ["js"] }
